# hr_selection_function

./: README.md  pyproject.toml
examples/: basic_use.ipynb  figure_9_and_10.ipynb
src/hr_selection_function/: __init__.py  config.py  data.py  gaia.py  math.py  models.py
tests/: test_data.py  test_gaia.py  test_import.py  test_models.py
